# radxa-penta-sata-hat-top-board-ctrl-c

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RELEASE_AUTOMATION.md  RELEASING.md  radxa-penta-fan-ctrl.conf  radxa-penta-fan-ctrl.env  radxa-penta-fan-ctrl.service
.github/: copilot-instructions.md
debian/: changelog  control  copyright  postinst  prerm  rules
include/: button.h  config.h  fan.h  oled.h  thermal.h
scripts/: release.sh
src/: button.c  config.c  fan.c  main.c  oled.c  thermal.c
